apps/monitoring/nfs-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfs-exporter
  labels:
    app: nfs-exporter
spec:
  selector:
    app: nfs-exporter
  ports:
    - name: metrics
      port: 9100
      targetPort: 9100
