apps/monitoring/node-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  labels:
    app: node-exporter
spec:
  selector:
    app: node-exporter
  clusterIP: None
  ports:
    - name: metrics
      port: 9100
      targetPort: 9100
